--- a/config/database.yml
+++ b/config/database.yml
@@ -24,6 +24,6 @@ test:
 production:
   <<: *default
   adapter: postgresql
-#   database: my_app_production
-#   username: my_app
-#   password: <%= ENV["MY_APP_DATABASE_PASSWORD"] %>
+  database: tacogramfinal_production
+  username: tacogramfinal
+  password: <%= ENV["tacogram_DATABASE_PASSWORD"] %>
